Adding example commands